<resources>
    <string name="app_name">Midlands Riders</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Midlands Riders</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next_ride_out">Next ride out...</string>
    <string name="about_us_title">Who we are</string>


    <!--
    <string name="about_us_p1">Midlands Riders is the UK’s No:1 Diverse Ride Out Group. We offering fortnightly ride outs for anyone that wishes to join in. We also hold weekly short rides to cafes and places. Midlands Riders started in 2014 and became official January 2015, From winning Matlock Baths Town Back In 2016 With A 4500+ Biker Protest For No Parking Charges To Hundreds Of Rides We Have Held &amp; Attended Over The Years. Midlands Riders group caters from 50cc to any size bike, we cater for L plate riders as well as the big bikes. ANY Age or Gender, Some Riders Even bring there kids along as a pilly’  This is a family community group. </string>
    <string name="about_us_p2">Each Ride out will have a set of MR Marshalls that will get you to the place we are riding too safely &amp; all together. Most of our Marshalls come with first aid or biker down training. Our Ride outs can vary from beach rides to sight seeing places in and around the UK: all done in the 1 ride day.</string>
    <string name="about_us_p3">Midlands Riders isn\'t an area, its a name. We have riders from as far north as Scotland, Far East As Lincoln, South As Devon &amp; West As The Coast. We Even Have European &amp; WORLD members. You dont have to attend all our rides to be a member, you can grab a hoody and Rep’ in your area at your towns rides &amp; events. MR Shop: <a href="https://www.midlandsriders.com/shop">www.midlandsriders.com/shop</a></string>
    <string name="about_us_p4">Want to see where members are and have been? Go to MR places : <a href="https://www.midlandsriders.com/mr-places">www.midlandsriders.com/mr-places </a></string>
    <string name="about_us_p5">Come Join in Today. With Over 13,500+ Members. </string>-->

    <string name="about_us_p1">
        Midlands Riders: The UK’s Number 1 Diverse Ride Out Group.
    </string>
    <string name="about_us_p2">
        Midlands Riders host fortnightly ride outs for anyone that wishes to join in, dont want to ride alone? Want to ride with other like minded bikers ? Your in the right place ! We also run weekly short rides to cafes and biker nights and this APP should help you join in with thousands of bikers just click the event tab to view !
    </string>
    <string name="about_us_p3">
        We are a Diverse group which is from 50cc to any size bike, we cater for L plate riders as well as the big bikes. ANY Age or Gender, Some Riders Even bring there kids along as a pilly’  - This is a family community group.
    </string>
    <string name="about_us_p4">
        Each Ride out will have MR Marshalls that will get you to the place we are riding too safely and all together. Most of our Marshalls come with first aid or biker down training. Our Ride outs can vary from beach rides to sight seeing places in and around the UK: all done in the 1 ride day.
    </string>
    <string name="about_us_p5">
        Midlands Riders isnt an area, its a name. We have riders from as far north as Scotland, Far East As Lincoln, South As Devon and West As The Coast. We Even Have European and WORLD members. You dont have to attend all our rides to be a member, you can grab a hoody and Rep’ in your area at your towns rides and events. MR Shop: www.midlandsriders.com/shop
    </string>
    <string name="about_us_p6">
        Want to see where members are and have been? Go to MR places : www.midlandsriders.com/mr-places
    </string>
    <string name="about_us_p7">
        Website : www.midlandsriders.com
    </string>
    <string name="about_us_p8">
        Main facebook page : www.facebook.com/midlandsriders
    </string>
    <string name="about_us_p9">
        Whatsapp chat line : 0330 133 1831
    </string>
    <string name="about_us_p10">
        Facebook group with thousands of bikers in that chat everyday : www.facebook.com/groups/midlandsridersofficial
    </string>
    <string name="about_us_p11">
        Come Join in Today With Thousands of other bikers.
    </string>

    <!--Home  -->
    <string name="day">Day </string>

    <!-- Lorem ipsum -->

    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

    <!-- Firebase -->
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="lbl_forgot_your_password">Forgot your password?</string>
    <string name="lbl_don_t_have_an_account">Don`t have an account?</string>
    <string name="lbl_sign_up">Sign Up</string>
    <string name="lbl_sign_in">Sign In</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_date_of_birth">Date of Birth</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_confirm_password">Confirm Password</string>
    <string name="lbl_reset_password">Reset Password</string>
    <string name="lbl_back">Back</string>
    <string name="lbl_show_location">Show my location on map</string>
    <string name="lbl_update_profile">Update Profile</string>
    <string name="err_email">Please provide email</string>
    <string name="err_password">Please provide password</string>
    <string name="err_email_valid">Please enter valid email</string>
    <string name="err_password_valid">Password must be 8 characters</string>
    <string name="err_cpassword_valid">Password and Confirm password don\'t match</string>
    <string name="lbl_no_intetnet">Please your network connection</string>
</resources>
